modified the index.php page to display all my hw

--- a/hw/Homework1/css/styles.css
+++ b/hw/Homework1/css/styles.css
@@ -45,7 +45,7 @@ h1{
 
 /*#image1{*/
 /*    float: right;*/
-}
+
 
 #t1{
     font-size: medium;
@@ -54,7 +54,7 @@ h1{
 }
 #t2{
     font-size: medium;
-    color:black:;
+    color:black;
 }
 
 footer{
